main controller complete with new products and specs

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,7 +19,7 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th class="col-background"><h4>Tents</h4></th>
+          <th class="col-background"><h4>Backpacks</h4></th>
           <div>
           <th class="row col-background">
             <div class="col-md-6">
