checkout 95% complete with images and products showing

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-      <h1 class="header-title text-left">Mean Tea Checkout</h1>
+      <h1 class="header-title text-left">Backpacker Checkout</h1>
     </div>
   </div>
 </div>
@@ -47,9 +47,9 @@
                 <h2>{{product.name}}</h2>
               </div>
             </div>
-          <img src="{{product.imageUrl}}" alt=""/>
-          <h5>Caffeine Scale: {{product.caffeineScale}}</h5>
-          <h5>Ingredients: {{product.ingredients}}</h5>
+          <img class="image-size-2" src="{{product.imageUrl}}" alt=""/>
+          <h5>Specifications: {{product.specifications}}</h5>
+          <h5>Weight: {{product.weight}}</h5>
           <h5>Rating: {{product.rating}}</h5>
         </td>
         <td class="cell-size-right">
