--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 </div>
 <div class="container">
 <div class="row">
-  <div class="col-md-12 text-right">
+  <div class="col-md-12 text-right button-margin">
     <a href="#/checkout">
       <button type="button" class="btn checkout-button" name="button">Checkout | Bag: {{vw.cartQuantity}}</button></a>
   </div>
@@ -23,7 +23,7 @@
           <div>
           <th class="row col-background">
             <div class="col-md-6">
-              <h5>Information</h5>
+              <h5>Backpack Information</h5>
             </div>
             <div class="col-md-4 text-right">
               <h5>Sort by price:</h5>
@@ -50,7 +50,6 @@
               <div class="col-md-8">
                   <h5 class="text-right">Quantity:
                   <select ng-model="amount">
-                    <option value="0">0</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
