about page created and adding info

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,25 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 text-center">
       <h1>About Backpacker</h1>
+    </div>
+    <div class="col-md-12 text-center">
+      <h2>Backpacker is an interactive shopping cart that was built using AngularJS and Bootstrap.</h2>
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="col-md-12 text-left">
+    <h4>Functions of Backpacker</h4>
+    <ul>
+      <li>Information for all the products is pulled from the main_controller.js and is appended dynamically.</li>
+      <li>User is able to search by name using the Search Bar which is located in the navigation bar.</li>
+      <li>User is able to sort products according to price. Highest to Lowest or vice versa.</li>
+      <li>User is able to add products to the shopping cart</li>
+      <li>If a user decides they want more/less than what is selected they can use the dropdown to select a greater or lesser quantity</li>
+      <li>User is able to search by category</li>
+      <li>The checkout button at the top of the page adjusts when more items are added to the cart</li>
+      <li>When the user clicks the Checkout button they are taken to the shopping cart</li>
+    </ul>
+  </div>
+ </div>
