about page finished

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 </div>
 <div class="container">
   <div class="col-md-12 text-left">
-    <h4>Functions of Backpacker</h4>
+    <h4>Functions of Backpacker First Page</h4>
     <ul>
       <li>Information for all the products is pulled from the main_controller.js and is appended dynamically.</li>
       <li>User is able to search by name using the Search Bar which is located in the navigation bar.</li>
@@ -21,5 +21,15 @@
       <li>The checkout button at the top of the page adjusts when more items are added to the cart</li>
       <li>When the user clicks the Checkout button they are taken to the shopping cart</li>
     </ul>
+    <h4>Functions of the Checkout Page</h4>
+    <ul>
+      <li>Items that are selected from the first page are dynamically added to the shopping cart.</li>
+      <li>Items listed in the shopping cart can be deleted.</li>
+      <li>The quantity of an item in the shopping cart can be updated</li>
+      <li>When a product is updated or deleted the total cost in the top right of the page will update.</li>
+      <li>When a product is updated the amount in quantity column is updated as well as the subtotal. </li>
+      <li>If all items are removed from the cart then the Order Total will show $0.00</li>
+    </ul>
   </div>
  </div>
+ <div class="spacer"></div>
