--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@
 }
 .nav-style{
   background-color: white;
+  font-family: 'Noto Serif', serif;
 }
 .button-margin{
   margin-bottom: 1%;
@@ -34,6 +35,7 @@
   color: black;
   font-style: italic;
   font-size: 3em;
+  font-family: 'Noto Serif', serif;
 }
 .background-color{
   background-color: #F7F7F7;
@@ -60,4 +62,8 @@
 }
 .spacer{
   height: 30vh;
+}
+h1 {
+    font-family: 'Noto Serif', serif;
+
 }
