--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
   color: black;
 }
 .nav-style{
-  background-color: white;
+  background-color: black;
   font-family: 'Noto Serif', serif;
 }
 .button-margin{
@@ -37,8 +37,14 @@
   font-size: 3em;
   font-family: 'Noto Serif', serif;
 }
-.background-color{
-  background-color: #F7F7F7;
+
+#background_Picture{
+  background: url(images/backpacker_3.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
 
 .margin-main-page{
@@ -53,6 +59,7 @@
   background-color: #fff;
 }
 
+
 .checkout-col-width{
   width: 20%;
 }
@@ -65,5 +72,4 @@
 }
 h1 {
     font-family: 'Noto Serif', serif;
-
 }
