--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,35 +1,38 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12 text-center">
-      <h1>About Backpacker</h1>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h1 class="about_title">Backpacker</h1>
+        </div>
+        <div class="col-md-12 text-center">
+            <h2 class="about_backpacker_title">Backpacker is an interactive shopping cart that was built using AngularJS and Bootstrap.</h2>
+        </div>
     </div>
-    <div class="col-md-12 text-center">
-      <h2>Backpacker is an interactive shopping cart that was built using AngularJS and Bootstrap.</h2>
-    </div>
-  </div>
 </div>
 <div class="container">
-  <div class="col-md-12 text-left">
-    <h4>Functions of Backpacker First Page</h4>
-    <ul>
-      <li>Information for all the products is pulled from the main_controller.js and is appended dynamically.</li>
-      <li>User is able to search by name using the Search Bar which is located in the navigation bar.</li>
-      <li>User is able to sort products according to price. Highest to Lowest or vice versa.</li>
-      <li>User is able to add products to the shopping cart</li>
-      <li>If a user decides they want more/less than what is selected they can use the dropdown to select a greater or lesser quantity</li>
-      <li>User is able to search by category</li>
-      <li>The checkout button at the top of the page adjusts when more items are added to the cart</li>
-      <li>When the user clicks the Checkout button they are taken to the shopping cart</li>
-    </ul>
-    <h4>Functions of the Checkout Page</h4>
-    <ul>
-      <li>Items that are selected from the first page are dynamically added to the shopping cart.</li>
-      <li>Items listed in the shopping cart can be deleted.</li>
-      <li>The quantity of an item in the shopping cart can be updated</li>
-      <li>When a product is updated or deleted the total cost in the top right of the page will update.</li>
-      <li>When a product is updated the amount in quantity column is updated as well as the subtotal. </li>
-      <li>If all items are removed from the cart then the Order Total will show $0.00</li>
-    </ul>
-  </div>
- </div>
- <div class="spacer"></div>
+    <div class="col-md-12 text-left">
+      <div class="block">
+        <h4 class="about_backpacker">Functions of Backpacker Home Page</h4>
+        <ul class="about_backpacker">
+            <li>Information for all the products is pulled from the main_controller.js and is appended dynamically.</li>
+            <li>User is able to search by name using the Search Bar which is located in the navigation bar.</li>
+            <li>User is able to sort products according to price. Highest to Lowest or vice versa.</li>
+            <li>User is able to add products to the shopping cart</li>
+            <li>If a user decides they want more/less than what is selected they can use the dropdown to select a greater or lesser quantity</li>
+            <li>User is able to search by category</li>
+            <li>The checkout button at the top of the page adjusts when more items are added to the cart</li>
+            <li>When the user clicks the Checkout button they are taken to the shopping cart</li>
+        </ul>
+
+        <h4 class="about_backpacker">Functions of the Checkout Page</h4>
+        <ul class="about_backpacker">
+            <li>Items that are selected from the first page are dynamically added to the shopping cart.</li>
+            <li>Items listed in the shopping cart can be deleted.</li>
+            <li>The quantity of an item in the shopping cart can be updated</li>
+            <li>When a product is updated or deleted the total cost in the top right of the page will update.</li>
+            <li>When a product is updated the amount in quantity column is updated as well as the subtotal. </li>
+            <li>If all items are removed from the cart then the Order Total will show $0.00</li>
+        </ul>
+        </div>
+    </div>
+</div>
+<div class="spacer"></div>
